setmy-info-rocky-java-ci/src/main/k8s/local/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: jenkins-deployment
    namespace: jenkins-local
spec:
    replicas: 1
    selector:
        matchLabels:
            app: jenkins
    template:
        metadata:
            labels:
                app: jenkins
                role: controller
        spec:
            containers:
                -   name: jenkins
                    image: setmyinfo/setmy-info-rocky-java-jenkins:latest
                    ports:
                        -   name: http
                            containerPort: 7070
                    readinessProbe:
                        httpGet:
                            path: /login
                            port: http
                        initialDelaySeconds: 30
                        periodSeconds: 10
                    livenessProbe:
                        httpGet:
                            path: /login
                            port: http
                        initialDelaySeconds: 120
                        periodSeconds: 30
#                    volumeMounts:
#                        -   name: gintra
#                            mountPath: /mnt/gintra
#            volumes:
#                -   name: gintra
#                    persistentVolumeClaim:
#                        claimName: jenkins-nfs-persistent-volume-claim
